# twitch-pubsub-discord-sync

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
discord_pubsub/: client.py  join_parts.py  webhooks.py
