[tool.poetry]
name = "discord-pubsub"
version = "0.1.0"
description = "PubSub subscription client for Python"
authors = ["Jonas Krüger Svensson <jonas-ks@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = {extras = ["speedups"], version = "^3.6.2"}
requests = "^2.24.0"
"discord.py" = "^1.5.0"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|\venv|\__pycache__)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


